--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,9 @@
     text-decoration: wavy;
     color: blue;
 }
+
+.ass {
+    font-size: xx-large;
+    color:blueviolet;
+    line-height: 2em;
+}
