--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-.test-class-z {
-    text-decoration: wavy;
-    color: blue;
-}
-
-.ass {
-    font-size: xx-large;
-    color:blueviolet;
-    line-height: 2em;
+red {
+    color: red;
 }
